tests/golden/type_errors/imported_file_type_error.err
Type error at <repo>/tests/golden/type_errors/imported_file_type_error_deps/lib.cd:1:13: undefined variable `missing`
  let value = missing;
              ^
